# pdf-vectordb-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  DOKUMENTASI_LENGKAP.md  LATIHAN_PRAKTIKUM.md  LICENSE  MATERI_PENGAJARAN.md  QUICKSTART.md  README.md  claude_desktop_config.example.json  pyproject.toml  requirements.txt  run_server.py
.claude/: settings.local.json
DIAGRAM/: 01_arsitektur_3tier.md  02_dataflow_indexing.md  03_dataflow_query.md  04_component_interaction.md  05_chunking_strategy.md  README.md
src/: __init__.py  config.py  embeddings.py  file_watcher.py  mcp_server.py  pdf_processor.py  utils.py  vector_store.py
tests/: __init__.py  test_utils.py
